add claim interface
